# AI-crypto-hedge-fund

./: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml
data/: ADA-USDT.parquet  BNB-USDT.parquet  BTC-USDT.parquet  DOGE-USDT.parquet  ETH-USDT.parquet  PEPE-USDT.parquet  SOL-USDT.parquet  XRP-USDT.parquet  ZEC-USDT.parquet
data/universe/: AAVE-USDT.parquet  ACE-USDT.parquet  ACT-USDT.parquet  ADA-USDT.parquet  ALICE-USDT.parquet  ALLO-USDT.parquet  ALT-USDT.parquet  ANIME-USDT.parquet  APE-USDT.parquet  APT-USDT.parquet  AR-USDT.parquet  ARB-USDT.parquet  ASR-USDT.parquet  ASTER-USDT.parquet  AVAX-USDT.parquet  AXS-USDT.parquet  BANANAS31-USDT.parquet  BCH-USDT.parquet  BEL-USDT.parquet  BERA-USDT.parquet  BICO-USDT.parquet  BIO-USDT.parquet  BNB-USDT.parquet  BTC-USDT.parquet  CHIP-USDT.parquet  CHZ-USDT.parquet  CRV-USDT.parquet  DASH-USDT.parquet  DEXE-USDT.parquet  DOGE-USDT.parquet  DOLO-USDT.parquet  DOT-USDT.parquet  EDEN-USDT.parquet  EIGEN-USDT.parquet  ENA-USDT.parquet  ENS-USDT.parquet  ENSO-USDT.parquet  EPIC-USDT.parquet  ETC-USDT.parquet  ETH-USDT.parquet  (+80 more)
scripts/: download_data.py  download_universe.py  explore_coins.py
src/chf/: __init__.py  features.py
src/chf/data/: __init__.py  loader.py
src/chf/domain/: __init__.py  models.py
src/chf/services/: __init__.py  backtest.py  metrics.py  portfolio.py  rebalancing.py  sizing.py  universe.py
src/chf/strategies/: __init__.py  base.py  indicators.py  ml.py  moving_average.py  moving_average_ls.py
tests/: test_metrics.py
