[project]
name = "crypto-hedge-fund"
version = "0.1.0"
description = "AI agent-based crypto trading & risk management system (MVP)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "arch>=6.3",
    "pyportfolioopt>=1.5",
    "ccxt>=4.2",
    "pyarrow>=15.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/chf"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
